[package]
name = "ds2484-linux"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal-async = "1.0"
ds2484 = { path = "../ds2484-rs" }
ds28ea00 = { path = "../ds28ea00-rs" }
linux-embedded-hal = { version = "0.4.0", features = ["async-tokio"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
serialport = "4.7"
clap = { version = "4.5.39", features = ["derive"] }
