[package]
name = "ds2484-linux"
version = "0.0.1"
edition = "2024"

[dependencies]
ds2484 = { path = "../ds2484-rs" }
ds28ea00 = { path = "../ds28ea00-rs" }
linux-embedded-hal = { version = "0.4.0", default-features = false, features = ["i2c"] }
log = "0.4"
env_logger = "0.11"
# serialport = "4.7"
clap = { version = "4.5.39", features = ["derive"] }
fixed = { version = "1.29", features = ["num-traits"] }
