[package]
name = "ds2484"
version = "0.0.4"
edition = "2024"
license = "Apache-2.0"
description = "A no-std driver implementation of the OneWire traits from embedded-onewire for the Analog Devices DS2484 I2C to 1-Wire bridge."
authors = ["Sunip K. Mukherjee <sunipkmukherjee@gmail.com>"]

[dependencies]
# embedded-onewire = { version = "0.0.4", default-features = false }
embedded-onewire = { path = "../embedded-onewire", default-features = false }
bitfield-struct = "0.11"
embedded-hal = { version = "1.0", default-features = false }
embedded-hal-async = { version = "1.0", default-features = false }

[features]
default = []
triplet-read = ["embedded-onewire/triplet-read"]

[dev-dependencies]
embedded-hal-mock = "0.11"

[lib]
doctest = false
